clang/test/BSC/Negative/Coroutine/Other/Definition/async_constexpr_declaration/async_constexpr_declaration.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../../lib/Headers/bsc_include -verify %s 

#include "future.hbs"

constexpr _Async int test(); // expected-error {{_Async function does not support constexpr}} 
constexpr _Async int test() { // expected-error {{_Async function does not support constexpr}} 
  return 42;
}

_Async int f(int start) {
  int a = _Await test();
  return a;
}

int main() {
  return 0;
}